# phantom-api

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: CONTRIBUTING.md
skills/openapi-mock-server/: SKILL.md  inline_example_refs.py
src/phantom_api/: __init__.py  __main__.py  cli.py  constants.py  models.py
src/phantom_api/generators/: __init__.py  example_extractor.py  fake_data.py  response_builder.py
src/phantom_api/output/: __init__.py  dashboard.py
src/phantom_api/parsers/: __init__.py  base.py  json_parser.py  openapi_parser.py  postman_parser.py
src/phantom_api/recorder/: __init__.py  proxy.py  replayer.py  storage.py
src/phantom_api/server/: __init__.py  app.py  handlers.py  hot_reload.py  middleware.py  router_builder.py
tests/: conftest.py  test_cli.py  test_edge_cases.py  test_fake_data.py  test_misc_coverage.py  test_recorder.py  test_router_builder.py
tests/fixtures/: collection.json  petstore.yaml  swagger-v2.json  users.json
tests/parsers/: test_json_parser.py  test_openapi_parser.py  test_postman_parser.py
