[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "phantom-api"
version = "1.0.0"
description = "Instant mock API server from an OpenAPI/Swagger spec, JSON file, or Postman collection."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "phantom-api contributors" }]
keywords = ["mock", "api", "openapi", "swagger", "postman", "fastapi", "testing"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Testing :: Mocking",
]
dependencies = [
    "typer>=0.12.0",
    "fastapi>=0.110.0",
    "uvicorn>=0.29.0",
    "prance>=23.6.21.0",
    "openapi-spec-validator>=0.7.1",
    "faker>=25.0.0",
    "pydantic>=2.6.0",
    "watchfiles>=0.21.0",
    "httpx>=0.27.0",
    "rich>=13.7.0",
    "pyyaml>=6.0.0",
    "exrex>=0.11.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
    "ruff>=0.4.0",
]

[project.urls]
Homepage = "https://github.com/phantom-api/phantom-api"
Repository = "https://github.com/phantom-api/phantom-api"
Issues = "https://github.com/phantom-api/phantom-api/issues"
Changelog = "https://github.com/phantom-api/phantom-api/blob/main/CHANGELOG.md"

[project.scripts]
phantom-api = "phantom_api.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/phantom_api"]

[tool.hatch.build.targets.sdist]
include = ["src/phantom_api", "README.md", "CHANGELOG.md", "LICENSE"]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "C4", "SIM", "RUF"]
ignore = ["B008", "N818"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["N802", "N803"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-ra"

[tool.coverage.run]
source = ["src/phantom_api"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
